# cpp-stack-tracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: test.yml
include/: foo.h  instrumentor.h  instrumentor_macros.h
src/: foo.cpp  main.cpp  simple_sampler.cpp
tests/: foo_test.cpp  instrumentor_test.cpp  main_test.cpp
